fix: style overflow

--- a/packages/umi-ui/client/src/components/DirectoryForm/index.less
+++ b/packages/umi-ui/client/src/components/DirectoryForm/index.less
@@ -58,7 +58,7 @@
     }
   }
   &-list {
-    max-height: 400px;
+    max-height: 360px;
     overflow-x: hidden;
     overflow-y: auto;
     margin-top: 16px;
