--- a/packages/umi-ui/client/src/pages/project/components/list/index.less
+++ b/packages/umi-ui/client/src/pages/project/components/list/index.less
@@ -4,7 +4,8 @@
   }
   &-list {
     max-height: calc(~'100vh - 140px');
-    overflow: hidden;
+    overflow-x: hidden;
+    overflow-y: auto;
     width: 100%;
     position: relative;
     &-layout {
